Update build.cmd